--- a/thule-shared/build.gradle
+++ b/thule-shared/build.gradle
@@ -43,16 +43,30 @@ subprojects {
     }
 }
 
+project("thule-oauth2") {
+    description = "Thule Oauth2"
+    dependencies {
+        annotationProcessor("org.projectlombok:lombok")
+
+        compileOnly("org.projectlombok:lombok")
+
+        implementation("org.springframework.boot:spring-boot-starter-logging")
+        implementation("org.springframework.cloud:spring-cloud-starter-oauth2")
+
+        testImplementation("org.springframework.boot:spring-boot-starter-test")
+        testImplementation("org.springframework.cloud:spring-cloud-starter-oauth2")
+    }
+}
+
 project("thule-spring-boot-starter") {
     description = "Thule Spring Boot Starter Utils"
     dependencies {
         annotationProcessor("org.projectlombok:lombok")
-        compileOnly("org.projectlombok:lombok")
 
         api project(":thule-utils")
+        api("org.springframework.boot:spring-boot-starter")
 
-        compileOnly("org.springframework.data:spring-data-jpa")
-        compileOnly("org.springframework.security:spring-security-core")
+        compileOnly("org.projectlombok:lombok")
 
         testImplementation project(":thule-spring-boot-starter-test")
     }
@@ -62,21 +76,23 @@ project("thule-spring-boot-starter-oauth2") {
     description = "Thule Spring Boot Starter Oauth2"
     dependencies {
         annotationProcessor("org.projectlombok:lombok")
-        compileOnly("org.projectlombok:lombok")
 
+        api project(":thule-oauth2")
         api project(":thule-spring-boot-starter")
+        api("org.springframework.boot:spring-boot-starter-web")
         api("org.springframework.cloud:spring-cloud-starter-oauth2")
 
+        compileOnly("org.projectlombok:lombok")
+
         testImplementation project(":thule-spring-boot-starter-test")
+
+        itestImplementation("org.apache.httpcomponents:httpclient")
     }
 }
 
 project("thule-spring-boot-starter-oauth2-test") {
     description = "Thule Spring Boot Starter Oauth2 Test"
     dependencies {
-        annotationProcessor("org.projectlombok:lombok")
-        compileOnly("org.projectlombok:lombok")
-
         api project(":thule-spring-boot-starter")
         api project(":thule-spring-boot-starter-test")
         api("org.springframework.security:spring-security-test")
@@ -88,9 +104,8 @@ project("thule-spring-boot-starter-test") {
     dependencies {
         api project(":thule-spring-boot-starter")
         api project(":thule-test")
+        api("org.awaitility:awaitility:4.0.1")
         api("org.springframework.boot:spring-boot-starter-test")
-        api("org.springframework.cloud:spring-cloud-contract-wiremock")
-        api("org.springframework.restdocs:spring-restdocs-mockmvc")
     }
 }
 
@@ -98,18 +113,14 @@ project("thule-test") {
     description = "Thule Test"
     dependencies {
         annotationProcessor("org.projectlombok:lombok")
-        compileOnly("org.projectlombok:lombok")
 
-        api project(":thule-utils")
-        api("org.awaitility:awaitility:4.0.1")
         api("org.springframework.boot:spring-boot-starter-actuator")
-        api("org.springframework.boot:spring-boot-starter-test")
         api("org.springframework.boot:spring-boot-starter-web")
-        api("org.springframework.retry:spring-retry")
 
-        compileOnly("org.springframework.cloud:spring-cloud-starter-oauth2")
+        implementation("org.springframework.boot:spring-boot-starter-test")
+        implementation("org.springframework.retry:spring-retry")
 
-        testImplementation("org.springframework.cloud:spring-cloud-starter-oauth2")
+        compileOnly("org.projectlombok:lombok")
     }
 }
 
@@ -117,27 +128,16 @@ project("thule-utils") {
     description = "Thule Utils"
     dependencies {
         annotationProcessor("org.projectlombok:lombok")
+
+        implementation("net.logstash.logback:logstash-logback-encoder:6.2")
+        implementation("org.codehaus.janino:janino") // Required by logback if-condition statements in the logback xml configuration
+        implementation("org.glassfish.jaxb:jaxb-runtime") // Required by anything using JAXB when using java 9+
+        implementation("org.springframework.boot:spring-boot-starter-aop")
+        implementation("org.springframework.boot:spring-boot-starter-logging")
+        implementation("org.springframework.boot:spring-boot-starter-validation")
+
         compileOnly("org.projectlombok:lombok")
 
-        compileOnly("org.springframework.boot:spring-boot-starter-data-jpa")
-        compileOnly("org.springframework.cloud:spring-cloud-starter-oauth2")
-        compileOnly("org.springframework.cloud:spring-cloud-starter-openfeign")
-
-        api("net.logstash.logback:logstash-logback-encoder:6.2")
-        api("org.codehaus.janino:janino") // Required by logback if-condition statements in the logback xml configuration
-        api("org.glassfish.jaxb:jaxb-runtime") // Required by anything using JAXB when using java 9+
-        api("org.hibernate:hibernate-core")
-        api("org.springframework.boot:spring-boot-starter-aop")
-        api("org.springframework.boot:spring-boot-starter-logging")
-        api("org.springframework.boot:spring-boot-starter-validation")
-        api("org.springframework.boot:spring-boot-starter-web")
-
-        testImplementation("org.springframework.boot:spring-boot-starter-data-jpa")
         testImplementation("org.springframework.boot:spring-boot-starter-test")
-        testImplementation("org.springframework.cloud:spring-cloud-starter-oauth2")
-        testImplementation("org.springframework.cloud:spring-cloud-starter-openfeign")
-
-        itestImplementation("com.h2database:h2")
-        itestImplementation("org.springframework.boot:spring-boot-starter-data-jpa")
     }
 }
