--- a/thule-configuration-service/build.gradle
+++ b/thule-configuration-service/build.gradle
@@ -25,10 +25,10 @@ apply plugin: "jacoco"
 apply plugin: "maven-publish"
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 
-// Standard Thule gradle plugin config
+// Standard Serin gradle plugin config
 apply from: buildscript.classLoader.getResource("uk/co/serin/gradle/scripts/build-config.gradle")
 
-// Non-standard Thule gradle plugin config
+// Non-Standard Serin gradle plugin config
 configurations {
     config
 }
@@ -80,4 +80,6 @@ dependencies {
     testImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
 
     dtestImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
+    dtestImplementation("org.springframework.boot:spring-boot-starter-actuator")
+    dtestImplementation("org.springframework.boot:spring-boot-starter-web")
 }
