--- a/thule-email-service/build.gradle
+++ b/thule-email-service/build.gradle
@@ -25,10 +25,10 @@ apply plugin: "jacoco"
 apply plugin: "maven-publish"
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 
-// Standard Thule gradle plugin config
+// Standard Serin gradle plugin config
 apply from: buildscript.classLoader.getResource("uk/co/serin/gradle/scripts/build-config.gradle")
 
-// Non-standard Thule gradle plugin config
+// Non-Standard Serin gradle plugin config
 
 description = "Thule Email Service"
 
@@ -44,7 +44,7 @@ dependencies {
 
     compileOnly("org.projectlombok:lombok")
 
-    implementation("uk.co.serin.thule:thule-spring-boot-starter-oauth2:${thuleSharedVersion}")
+    implementation("uk.co.serin.thule:thule-spring-boot-starter-security-oauth2:${thuleSharedVersion}")
     implementation("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
     implementation("org.springframework.boot:spring-boot-starter-actuator")
     implementation("org.springframework.boot:spring-boot-starter-mail")
@@ -55,11 +55,13 @@ dependencies {
     implementation("org.springframework.cloud:spring-cloud-starter-zipkin")
     implementation("org.springframework.retry:spring-retry") // Required to retry connecting to the configuration service when it is not available at startup
 
-    testImplementation("uk.co.serin.thule:thule-spring-boot-starter-oauth2-test:${thuleSharedVersion}")
+    testImplementation("uk.co.serin.thule:thule-spring-boot-starter-security-test:${thuleSharedVersion}")
     testImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
     testImplementation("com.bitmechanic:dumbster:1.9.0.2")
 
     itestImplementation("org.springframework.restdocs:spring-restdocs-mockmvc")
 
     dtestImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
+    dtestImplementation("org.springframework.boot:spring-boot-starter-actuator")
+    dtestImplementation("org.springframework.boot:spring-boot-starter-web")
 }
