--- a/thule-shared/settings.gradle
+++ b/thule-shared/settings.gradle
@@ -6,10 +6,15 @@ pluginManagement {
 
 rootProject.name = "thule-shared"
 
-include "thule-oauth2"
-include "thule-spring-boot-starter"
-include "thule-spring-boot-starter-oauth2"
-include "thule-spring-boot-starter-oauth2-test"
-include "thule-spring-boot-starter-test"
+include "thule-data"
+include "thule-security"
+include "thule-security-oauth2"
 include "thule-test"
 include "thule-utils"
+
+include "thule-spring-boot-starter"
+include "thule-spring-boot-starter-data"
+include "thule-spring-boot-starter-security"
+include "thule-spring-boot-starter-security-oauth2"
+include "thule-spring-boot-starter-security-test"
+include "thule-spring-boot-starter-test"
