--- a/thule-shared/build.gradle
+++ b/thule-shared/build.gradle
@@ -12,6 +12,7 @@ buildscript {
     }
 }
 
+// Plugins
 plugins {
     id "com.github.ben-manes.versions" version "0.27.0"
     id "org.sonarqube" version "2.8" apply(false)
