--- a/thule-discovery-service/build.gradle
+++ b/thule-discovery-service/build.gradle
@@ -15,14 +15,14 @@ buildscript {
 // Plugins
 plugins {
     id "com.github.ben-manes.versions" version "0.27.0"
+    id "jacoco"
+    id "java"
+    id "maven-publish"
     id "org.asciidoctor.convert" version "1.6.0"
     id "org.sonarqube" version "2.8"
     id "org.springframework.boot" version "2.1.10.RELEASE"
 }
 apply plugin: "io.spring.dependency-management"
-apply plugin: "java"
-apply plugin: "jacoco"
-apply plugin: "maven-publish"
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 
 // Standard Serin gradle plugin config
