--- a/thule-repository-mongodb/build.gradle
+++ b/thule-repository-mongodb/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     }
 }
 
+// Plugins
 plugins {
     id "com.github.ben-manes.versions" version "0.27.0"
     id "jacoco"
@@ -25,6 +26,8 @@ apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 apply from: buildscript.classLoader.getResource("uk/co/serin/gradle/scripts/build-config.gradle")
 
 // Non-standard Serin gradle plugin config
+
+description = "Thule Repository Mongodb"
 
 // Dependencies
 dependencies {
