--- a/thule-email-service/build.gradle
+++ b/thule-email-service/build.gradle
@@ -54,9 +54,9 @@ dependencies {
     implementation("org.springframework.cloud:spring-cloud-starter-zipkin")
     implementation("org.springframework.retry:spring-retry") // Required to retry connecting to the configuration service when it is not available at startup
 
-    testImplementation("uk.co.serin.thule:thule-spring-boot-starter-security-test:${thuleSharedVersion}")
     testImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
     testImplementation("com.bitmechanic:dumbster:1.9.0.2")
+    testImplementation("org.springframework.security:spring-security-test")
 
     itestImplementation("org.springframework.restdocs:spring-restdocs-mockmvc")
 
