--- a/thule-people-service/build.gradle
+++ b/thule-people-service/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     itestImplementation("com.h2database:h2")
     itestImplementation("com.oracle:ojdbc8:18.3")
     itestImplementation("org.hsqldb:hsqldb")
+    itestImplementation("org.springframework.security:spring-security-test")
 
     dtestImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
     dtestImplementation("org.springframework.boot:spring-boot-starter-actuator")
