--- a/thule-shared/gradle.properties
+++ b/thule-shared/gradle.properties
@@ -3,3 +3,5 @@ group=uk.co.serin.thule
 version=1.1.0-SNAPSHOT
 nexusHost=pooh
 nexusPort=8081
+
+org.gradle.jvmargs=-Xmx4096m, -XX:MaxMetaspaceSize=512m
