--- a/thule-shared/gradle.properties
+++ b/thule-shared/gradle.properties
@@ -4,4 +4,4 @@ version=1.1.0-SNAPSHOT
 nexusHost=pooh
 nexusPort=8081
 
-org.gradle.jvmargs=-Xmx4096m, -XX:MaxMetaspaceSize=512m
+org.gradle.jvmargs=-XX:MaxMetaspaceSize=512m
