--- a/thule-admin-service/build.gradle
+++ b/thule-admin-service/build.gradle
@@ -1,6 +1,4 @@
 buildscript {
-    ext["mockito.version"] = "3.1.0" // Spring boot 2.1 uses mockito version 2.23.4 which does not fully support java 11+
-
     repositories {
         maven { url "http://${nexusHost}:${nexusPort}/repository/maven-public" }
     }
@@ -18,7 +16,7 @@ plugins {
     id "java"
     id "maven-publish"
     id "org.sonarqube" version "2.8"
-    id "org.springframework.boot" version "2.2.1.RELEASE"
+    id "org.springframework.boot" version "2.1.10.RELEASE"
 }
 apply plugin: "io.spring.dependency-management"
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
@@ -33,7 +31,7 @@ description = "Thule Admin Service"
 // Dependencies
 dependencyManagement {
     imports {
-        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Hoxton.RELEASE")
+        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR4")
     }
 }
 
