--- a/thule-shared/build.gradle
+++ b/thule-shared/build.gradle
@@ -36,7 +36,7 @@ subprojects {
     // Dependencies
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR4")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Hoxton.RELEASE")
         }
     }
 }
