Removed hard coded secret key

--- a/thule-people-service/src/main/resources/config/application.yml
+++ b/thule-people-service/src/main/resources/config/application.yml
@@ -27,7 +27,7 @@ security:
   oauth2:
     resource:
       jwt:
-        key-value: gmjtdvNVmQRz8bzw6ae
+        key-value: secret
 
 # Spring boot configuration
 spring:
