--- a/thule-email-service/src/main/resources/config/application.yml
+++ b/thule-email-service/src/main/resources/config/application.yml
@@ -18,7 +18,7 @@ security:
   oauth2:
     resource:
       jwt:
-        key-value: gmjtdvNVmQRz8bzw6ae
+        key-value: secret
 
 # Spring boot configuration
 spring:
