--- a/thule-shared/build.gradle
+++ b/thule-shared/build.gradle
@@ -31,6 +31,7 @@ subprojects {
 
     // Non-standard Serin gradle plugin config
     bootJar.enabled = false // Don't need an "über-jar" but still want the rest of the spring boot plugin
+    bootBuildInfo.enabled = false // Don't need the build info in the jar
     jar.enabled = true // Don't need an "über-jar" but still want the rest of the spring boot plugin
 
     // Dependencies
