--- a/thule-admin-service/build.gradle
+++ b/thule-admin-service/build.gradle
@@ -16,7 +16,7 @@ plugins {
     id "java"
     id "maven-publish"
     id "org.sonarqube" version "2.8"
-    id "org.springframework.boot" version "2.1.10.RELEASE"
+    id "org.springframework.boot" version "2.2.2.RELEASE"
 }
 apply plugin: "io.spring.dependency-management"
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
@@ -31,7 +31,7 @@ description = "Thule Admin Service"
 // Dependencies
 dependencyManagement {
     imports {
-        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR4")
+        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Hoxton.RELEASE")
     }
 }
 
@@ -41,7 +41,7 @@ dependencies {
     compileOnly("org.projectlombok:lombok")
 
     implementation("uk.co.serin.thule:thule-spring-boot-starter:${thuleSharedVersion}")
-    implementation("de.codecentric:spring-boot-admin-starter-server:2.1.6")
+    implementation("de.codecentric:spring-boot-admin-starter-server:2.2.0")
     implementation("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
     implementation("org.springframework.cloud:spring-cloud-starter-config")
     implementation("org.springframework.cloud:spring-cloud-starter-kubernetes")
