--- a/thule-email-service/build.gradle
+++ b/thule-email-service/build.gradle
@@ -15,6 +15,7 @@ plugins {
     id "jacoco"
     id "java"
     id "maven-publish"
+    id "org.asciidoctor.convert" version "1.6.0"
     id "org.sonarqube" version "2.8"
     id "org.springframework.boot" version "2.2.2.RELEASE"
 }
