--- a/thule-people-service/src/main/resources/config/application.yml
+++ b/thule-people-service/src/main/resources/config/application.yml
@@ -30,6 +30,10 @@ security:
 spring:
   application:
     name: thule-people-service
+  cloud:
+    loadbalancer:
+      ribbon:
+        enabled: false
   datasource:
     driver-class-name: net.sf.log4jdbc.DriverSpy
     hikari:
