--- a/thule-admin-service/src/main/resources/config/application.yml
+++ b/thule-admin-service/src/main/resources/config/application.yml
@@ -17,6 +17,9 @@ management:
 spring:
   application:
     name: thule-admin-service
+  boot:
+    admin:
+      context-path: ${spring.application.name}
   sleuth:
     sampler:
       probability: 1.0
