Added sba context-path

--- a/thule-admin-service/src/main/resources/config/application.yml
+++ b/thule-admin-service/src/main/resources/config/application.yml
@@ -19,7 +19,7 @@ spring:
     name: thule-admin-service
   boot:
     admin:
-      context-path: ${spring.application.name}
+      context-path: /${spring.application.name}
   sleuth:
     sampler:
       probability: 1.0
