Added sba context-path

--- a/thule-admin-service/src/main/resources/config/application.yml
+++ b/thule-admin-service/src/main/resources/config/application.yml
@@ -21,9 +21,9 @@ server:
 spring:
   application:
     name: thule-admin-service
-  boot:
-    admin:
-      context-path: /${spring.application.name}
+#  boot:
+#    admin:
+#      context-path: /${spring.application.name}
   sleuth:
     sampler:
       probability: 1.0
