--- a/thule-environment-provisioning/src/main/kubernetes/environments/cit/charts/ingress/thule.yaml
+++ b/thule-environment-provisioning/src/main/kubernetes/environments/cit/charts/ingress/thule.yaml
@@ -6,6 +6,7 @@ metadata:
     kubernetes.io/ingress.allow-http: "false"
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/x-forwarded-prefix: "thule-admin-service"
   name: thule-ingress
   namespace: thule
 spec:
@@ -37,4 +38,12 @@ spec:
           backend:
             serviceName: thule-people-service
             servicePort: 80
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: nginx-load-balancer-microk8s-conf
+  namespace: ingress
+data:
+  use-forwarded-headers: "true"
 ---
