Added sba context-path

--- a/thule-admin-service/src/main/resources/config/application.yml
+++ b/thule-admin-service/src/main/resources/config/application.yml
@@ -16,7 +16,7 @@ management:
 
 # Server configuration
 server:
-  forward-headers-strategy: framework
+  forward-headers-strategy: native
 
 # Spring boot configuration
 spring:
