Added sba context-path

--- a/thule-admin-service/src/main/resources/config/application.yml
+++ b/thule-admin-service/src/main/resources/config/application.yml
@@ -1,3 +1,8 @@
+logging:
+  level:
+    root: debug
+    org.springframework: debug
+
 # Spring actuator configuration
 info:
   description: Thule Admin Service
