--- a/thule-admin-service/src/main/resources/config/application.yml
+++ b/thule-admin-service/src/main/resources/config/application.yml
@@ -14,7 +14,6 @@ management:
     web:
       exposure:
         include: "*"
-    base-path: /sba/actuator
   endpoint:
     health:
       show-details: ALWAYS
@@ -29,7 +28,8 @@ spring:
     name: thule-admin-service
   boot:
     admin:
-      context-path: /sba
+      ui:
+        public-url: /thule-admin-service
   sleuth:
     sampler:
       probability: 1.0
