Added sba context-path

--- a/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-admin-service.yml
+++ b/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-admin-service.yml
@@ -24,7 +24,7 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
 ---
 kind: Deployment
-apiVersion: v1
+apiVersion: apps/v1
 metadata:
   name: thule-admin-service
   namespace: thule
